# lpcde

./: .gitattributes  .gitignore  CCJM_2024_JOSS.md  CHANGELOG.md  LICENSE.md  README.md  paper.bib  paper.md  todo.org
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: CI.yml  ci.yml  publish-python.yml  r.yml
Python/: lpcde_illustration.py
Python/lpcde/: README.md  setup.cfg
Python/lpcde/src/lpcde/: __init__.py  _validation.py  lpbwcde.py  lpbwcde_fn.py  lpcde.py  lpcde_fn.py
Python/lpcde/tests/: test_numerical_alignment.py
Python/lpcde/tests/fixtures/: r-baseline-1d.csv  r-baseline-2d.csv
R/: bw_table.R  bw_table.tex  lpcde_comparison.R  lpcde_illustration.R  lpcde_replication.R  pw_table.R  pw_table_b.tex  pw_table_int.tex  pw_table_nb.tex  replication_compiled.R
R/lpcde/: .RData  .Rbuildignore  .Rhistory  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  cran-comments.md  lpcde.Rproj
R/lpcde/R/: RcppExports.R  dgp.R  lpbwcde.R  lpbwcde_fns.R  lpbwcde_methods.R  lpcde-package.R  lpcde.R  lpcde_fns.R  lpcde_methods.R  matrices.R  test.R  utils.R
R/lpcde/inst/: REFERENCES.bib
R/lpcde/man/: S_exact.Rd  S_x.Rd  SxmatC.Rd  T_x.Rd  T_y.Rd  T_y_exact.Rd  asymp_var.Rd  b_x.Rd  basis_vec.Rd  basis_vecC.Rd  bw_imse.Rd  bw_irot.Rd  (+32 more)
replication/: lpcde_illustration.R  lpcde_illustration.do  lpcde_illustration.py  lpcde_replication.R  lpcde_replication.do  lpcde_replication.py
replication_scripts/: pw_table.R  replication_compiled.R
stata/: build-lpcde-mlib.do  lpbwcde.ado  lpbwcde.sthlp  lpcde.ado  lpcde.mlib  lpcde.pkg  lpcde.sthlp  lpcde_fun.do  lpcde_illustration.do  stata.toc
stata/tests/: test-numerical-baseline.do
(+137 files in other folders)
