[metadata]
name = lpcde
version = 1.0.0
author = Matias D. Cattaneo, Rajita Chandak, Michael Jansson, Xinwei Ma
author_email = Matias D. Cattaneo <matias.d.cattaneo@gmail.com>, Rajita Chandak <rajita.chandak@gmail.com>, Michael Jansson <michael.jansson.berkeley@gmail.com>, Xinwei Ma <xinweima.pku@gmail.com>
maintainer = Matias D. Cattaneo
maintainer_email = matias.d.cattaneo@gmail.com
description = Implements local polynomial conditional distribution and density estimation with bandwidth selection and robust inference.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-only
url = https://github.com/nppackages/lpcde
project_urls =
    Homepage = https://nppackages.github.io/lpcde/
    Bug Tracker = https://github.com/nppackages/lpcde/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.23
    pandas>=2.0.0
    scipy>=1.10
    matplotlib>=3.8

[options.extras_require]
dev =
    pytest
    build
    setuptools
    twine
    wheel

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
